--- a/modules/openapi-generator/src/main/resources/aspnetcore/5.0-bpi/model.mustache
+++ b/modules/openapi-generator/src/main/resources/aspnetcore/5.0-bpi/model.mustache
@@ -1,4 +1,3 @@
-{{>partial_header}}
 using System;
 using System.Linq;
 using System.Text;
@@ -6,7 +5,8 @@ using System.Collections.Generic;
 using System.ComponentModel;
 using System.ComponentModel.DataAnnotations;
 using System.Runtime.Serialization;
-using Newtonsoft.Json;
+using System.Text.Json;
+using System.Text.Json.Serialization;
 {{#models}}
 {{#model}}
 {{#discriminator}}
@@ -88,7 +88,12 @@ namespace {{modelPackage}}
         /// <returns>JSON string presentation of the object</returns>
         public {{#parent}}{{^isMap}}{{^isArray}}new {{/isArray}}{{/isMap}}{{/parent}}string ToJson()
         {
-            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+            JsonSerializerOptions options = new JsonSerializerOptions{
+                Converters = {
+                    new JsonStringEnumConverter()
+                }
+            };
+            return JsonSerializer.Serialize(this,options);
         }
 
         /// <summary>
