--- a/modules/openapi-generator/src/main/resources/aspnetcore/5.0-bpi/model.mustache
+++ b/modules/openapi-generator/src/main/resources/aspnetcore/5.0-bpi/model.mustache
@@ -56,6 +56,9 @@ namespace {{modelPackage}}
         [MinLength({{minLength}})]{{/maxLength}}{{/minLength}}{{^minLength}}{{#maxLength}}
         [MaxLength({{.}})]{{/maxLength}}{{/minLength}}{{#minimum}}{{#maximum}}
         [Range({{minimum}}, {{maximum}})]{{/maximum}}{{/minimum}}
+        {{#minItems}}
+        [MinLength({{minItems}})]{{/minItems}}{{#maxItems}}
+        [MaxLength({{maxItems}})]{{/maxItems}}
         [DataMember(Name="{{baseName}}", EmitDefaultValue={{#isNullable}}true{{/isNullable}}{{^isNullable}}false{{/isNullable}})]
         {{#isEnum}}
         public {{{datatypeWithEnum}}}{{#isNullable}}?{{/isNullable}} {{name}} { get; set; }{{#defaultValue}} = {{{.}}};{{/defaultValue}}
